<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="129dp">

    <TextView
        android:id="@+id/room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="8dp"
        style="@style/TextStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/supreme_room"/>

    <ImageView
        android:id="@+id/question_icon"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/room_name"
        android:src="@drawable/question"/>

    <TextView
        android:id="@+id/room_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/room_name"
        app:layout_constraintTop_toBottomOf="@id/room_name"
        style="@style/TextStyle5"
        android:text="@string/room_location"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/time_view"/>

    <LinearLayout
        android:id="@+id/timeline_view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:background="@color/deep_sky_blue"
        app:layout_constraintBottom_toTopOf="@id/time_view">

        <View
            android:id="@+id/bar_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
        <View
            android:id="@+id/bar_18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:background="@color/very_light_pink"/>
    </LinearLayout>

    <TextView
        android:id="@+id/current_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyle3"
        app:layout_constraintLeft_toLeftOf="@id/line_indicator"
        app:layout_constraintTop_toBottomOf="@id/room_location"
        app:layout_constraintBottom_toTopOf="@id/line_indicator"
        android:text="@string/current_time"/>

    <View
        android:id="@+id/line_indicator"
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:background="@color/very_light_pink_two"
        app:layout_constraintLeft_toLeftOf="@id/timeline_view"
        app:layout_constraintBottom_toBottomOf="@id/timeline_view"/>

    <LinearLayout
        android:id="@+id/time_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/TextStyle4"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_11"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_13"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_14"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_16"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_17"/>

        <TextView
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_18"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>